fix: layout overflow

--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -25,7 +25,7 @@
 }
 
 .stats {
-  width: 100%;
+  width: 96%;
   display: flex;
   flex-direction: column;
   justify-content: center;
